other/require-non-root-groups/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-non-root-groups
policies:
- ../require-non-root-groups.yaml
resources:
- resource.yaml
results:
- kind: CronJob
  policy: require-non-root-groups
  resources:
  - fsgrp-badcronjob01
  result: fail
  rule: check-fsgroup
- kind: Deployment
  policy: require-non-root-groups
  resources:
  - fsgrp-baddeployment01
  result: fail
  rule: check-fsgroup
- kind: Pod
  policy: require-non-root-groups
  resources:
  - fsgrp-badpod01
  result: fail
  rule: check-fsgroup
- kind: CronJob
  policy: require-non-root-groups
  resources:
  - fsgrp-goodcronjob01
  - fsgrp-goodcronjob02
  result: pass
  rule: check-fsgroup
- kind: Deployment
  policy: require-non-root-groups
  resources:
  - fsgrp-gooddeployment01
  - fsgrp-gooddeployment02
  result: pass
  rule: check-fsgroup
- kind: Pod
  policy: require-non-root-groups
  resources:
  - fsgrp-goodpod01
  - fsgrp-goodpod02
  result: pass
  rule: check-fsgroup
- kind: CronJob
  policy: require-non-root-groups
  resources:
  - badcronjob01
  - badcronjob02
  - badcronjob03
  - badcronjob04
  - badcronjob05
  - badcronjob06
  - badcronjob07
  - badcronjob08
  - badcronjob09
  - badcronjob10
  - badcronjob11
  - badcronjob12
  - badcronjob13
  - badcronjob14
  - badcronjob15
  result: fail
  rule: check-runasgroup
- kind: Deployment
  policy: require-non-root-groups
  resources:
  - baddeployment01
  - baddeployment02
  - baddeployment03
  - baddeployment04
  - baddeployment05
  - baddeployment06
  - baddeployment07
  - baddeployment08
  - baddeployment09
  - baddeployment10
  - baddeployment11
  - baddeployment12
  - baddeployment13
  - baddeployment14
  - baddeployment15
  result: fail
  rule: check-runasgroup
- kind: Pod
  policy: require-non-root-groups
  resources:
  - badpod01
  - badpod02
  - badpod03
  - badpod04
  - badpod05
  - badpod06
  - badpod07
  - badpod08
  - badpod09
  - badpod10
  - badpod11
  - badpod12
  - badpod13
  - badpod14
  - badpod15
  result: fail
  rule: check-runasgroup
- kind: CronJob
  policy: require-non-root-groups
  resources:
  - goodcronjob01
  - goodcronjob02
  - goodcronjob03
  - goodcronjob04
  - goodcronjob05
  - goodcronjob06
  - goodcronjob07
  - goodcronjob08
  - goodcronjob09
  - goodcronjob10
  result: pass
  rule: check-runasgroup
- kind: Deployment
  policy: require-non-root-groups
  resources:
  - gooddeployment01
  - gooddeployment02
  - gooddeployment03
  - gooddeployment04
  - gooddeployment05
  - gooddeployment06
  - gooddeployment07
  - gooddeployment08
  - gooddeployment09
  - gooddeployment10
  result: pass
  rule: check-runasgroup
- kind: Pod
  policy: require-non-root-groups
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  - goodpod04
  - goodpod05
  - goodpod06
  - goodpod07
  - goodpod08
  - goodpod09
  - goodpod10
  result: pass
  rule: check-runasgroup
- kind: CronJob
  policy: require-non-root-groups
  resources:
  - supgrp-badcronjob01
  - supgrp-badcronjob02
  result: fail
  rule: check-supplementalgroups
- kind: Deployment
  policy: require-non-root-groups
  resources:
  - supgrp-baddeployment01
  - supgrp-baddeployment02
  result: fail
  rule: check-supplementalgroups
- kind: Pod
  policy: require-non-root-groups
  resources:
  - supgrp-badpod01
  - supgrp-badpod02
  result: fail
  rule: check-supplementalgroups
- kind: CronJob
  policy: require-non-root-groups
  resources:
  - supgrp-goodcronjob01
  - supgrp-goodcronjob02
  - supgrp-goodcronjob03
  result: pass
  rule: check-supplementalgroups
- kind: Deployment
  policy: require-non-root-groups
  resources:
  - supgrp-gooddeployment01
  - supgrp-gooddeployment02
  - supgrp-gooddeployment03
  result: pass
  rule: check-supplementalgroups
- kind: Pod
  policy: require-non-root-groups
  resources:
  - supgrp-goodpod01
  - supgrp-goodpod02
  - supgrp-goodpod03
  result: pass
  rule: check-supplementalgroups
